--- a/Language/strings_es.xml
+++ b/Language/strings_es.xml
@@ -1,22 +1,70 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
+  <string name="Webradio.MenuEntry">RadioWeb</string>
+  <string name="Webradio.StateDisplayLabel">RadioWeb</string>
+  <string name="Webradio.Home.ScreenTitle">RadioWeb</string>
   <string name="Webradio.Home.Menu.View">View</string>
   <string name="Webradio.Home.Menu.ShowFilter">Filtrar</string>
   <string name="Webradio.Home.Menu.ShowFavorites">Favoritos</string>
+  <string name="Webradio.Home.Menu.ShowAll">Mostrar todos los Streams</string>
   <string name="Webradio.Home.Menu.Settings">Settings</string>
   <string name="Webradio.Home.Menu.Search">Buscar</string>
+  <string name="Webradio.Home.Genres">Géneros</string>
+  <string name="Webradio.Home.Bitrate">Velocidad de Grabación</string>
+  <string name="Webradio.Home.Country">País</string>
+  <string name="Webradio.Home.City">Ciudad</string>
   <string name="Webradio.Settings.ScreenTitle">Settings</string>
   <string name="Webradio.Settings.Menu.Filter">Filtrar</string>
   <string name="Webradio.Settings.Menu.Favorites">Favoritos</string>
+  <string name="Webradio.Settings.Updates">Actualizaciones</string>
+  <string name="Webradio.Settings.Streamlistupdate">Actualizar Lista de Streams</string>
+  <string name="Webradio.Settings.Languageupdate">Actualizar Idiomas</string>
+  <string name="Webradio.Settings.Automatically">Automáticamente</string>
+  <string name="Webradio.Settings.Manually">Manualmente</string>
+  <string name="Webradio.Settings.Disabled">Deshabilitado</string>
+  <string name="Webradio.Settings.Report">Aviso de Estación rota</string>
+  <string name="Webradio.Settings.Online">Versión Online</string>
+  <string name="Webradio.Settings.Offline">Versión Offline</string>
+  <string name="Webradio.Settings.Version">Versión</string>
   <string name="Webradio.Favorites.ScreenTitle">Favoritos</string>
+  <string name="Webradio.Favorites.Helptext">Gestiona tus Favoritos</string>
   <string name="Webradio.Favorites.Add">Añadir</string>
   <string name="Webradio.Favorites.Delete">Eliminar</string>
+  <string name="Webradio.Favorites.Rename">Renombrar</string>
+  <string name="Webradio.Favorites.Save">Grabar</string>
   <string name="Webradio.Filter.ScreenTitle">Filtrar</string>
+  <string name="Webradio.Filter.Helptext">Gestiona tus Filtros</string>
   <string name="Webradio.Filter.Delete">Eliminar</string>
   <string name="Webradio.Filter.Add">Añadir</string>
+  <string name="Webradio.Filter.Import">Importar</string>
   <string name="Webradio.Filter.Clear">Despejado</string>
+  <string name="Webradio.Filter.Save">Guardar</string>
+  <string name="Webradio.Filter.Genres">Géneros</string>
+  <string name="Webradio.Filter.Bitrate">Velocidad de Grabación</string>
+  <string name="Webradio.Filter.Country">País</string>
+  <string name="Webradio.Filter.City">Ciudad</string>
   <string name="Webradio.Dialog.ShowFilter.Header">Filtrar</string>
+  <string name="Webradio.Dialog.ShowFilter.ShowFilter">Enseñar Mi Filtro</string>
+  <string name="Webradio.Dialog.ShowFilter.Country">País</string>
+  <string name="Webradio.Dialog.ShowFilter.City">Ciudad</string>
   <string name="Webradio.Dialog.ShowFilter.Genre">Genre</string>
+  <string name="Webradio.Dialog.ShowFilter.Bitrate">Velocidad de Grabación</string>
+  <string name="Webradio.Dialog.ShowFilter.Quickfilter">Filtro Rápido Provisional</string>
+  <string name="Webradio.Dialog.ImportFilter.Header">Importar Filtro</string>
+  <string name="Webradio.Dialog.DeleteFilter.Header">Borrar Filtro</string>
   <string name="Webradio.Dialog.DeleteFilter.Delete">Eliminar</string>
+  <string name="Webradio.Dialog.ShowFavorites.Header">Mostrar Favoritos</string>
+  <string name="Webradio.Dialog.ShowFavorites.SetFav">Añadido o Eliminado el Stream a Favoritos</string>
+  <string name="Webradio.Dialog.ImportFavorites.Header">Importar Filtro</string>
   <string name="Webradio.Dialog.Search.Header">Buscar</string>
+  <string name="Webradio.Dialog.Search.Title">en el Título</string>
+  <string name="Webradio.Dialog.Search.Description">en la Descripción</string>
+  <string name="Webradio.Dialog.Search.All">en Todo</string>
+  <string name="Webradio.Dialog.Search.NoStreams">No se encontraron Streams</string>
+  <string name="Webradio.Dialog.Search.NoSearchText">Por favor, introduce un texto de búsqueda</string>
+  <string name="Webradio.Dialog.LoadUpdate.Header">Actualizar la Lista de Streams</string>
+  <string name="Webradio.Dialog.LoadUpdate.DownloadComplete">Descarga completa</string>
+  <string name="Webradio.Dialog.LoadUpdate.DownloadError">Error descargando</string>
+  <string name="Webradio.Dialog.LoadUpdate.Button">Iniciar Actualización</string>
+  <string name="Webradio.UIContributor.Listeners">Oyentes:</string>
 </resources>
