--- a/Language/strings_fr.xml
+++ b/Language/strings_fr.xml
@@ -1,21 +1,69 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
+  <string name="Webradio.MenuEntry">Webradio</string>
+  <string name="Webradio.StateDisplayLabel">Webradio</string>
+  <string name="Webradio.Home.ScreenTitle">Webradio</string>
+  <string name="Webradio.Home.Menu.View">Vue</string>
   <string name="Webradio.Home.Menu.ShowFilter">Tri par</string>
   <string name="Webradio.Home.Menu.ShowFavorites">Favoris</string>
+  <string name="Webradio.Home.Menu.ShowAll">Afficher tous les flux</string>
   <string name="Webradio.Home.Menu.Settings">Réglages</string>
   <string name="Webradio.Home.Menu.Search">Recherche</string>
+  <string name="Webradio.Home.Genres">Genres</string>
+  <string name="Webradio.Home.Bitrate">Bitrate</string>
+  <string name="Webradio.Home.Country">Pays</string>
+  <string name="Webradio.Home.City">Ville</string>
   <string name="Webradio.Settings.ScreenTitle">Réglages</string>
   <string name="Webradio.Settings.Menu.Filter">Tri par</string>
   <string name="Webradio.Settings.Menu.Favorites">Favoris</string>
+  <string name="Webradio.Settings.Updates">Mises à jour</string>
+  <string name="Webradio.Settings.Streamlistupdate">Mettre à jour la liste des flux</string>
+  <string name="Webradio.Settings.Languageupdate">Mettre à jour le fichiers des langues</string>
+  <string name="Webradio.Settings.Automatically">Automatiquement</string>
+  <string name="Webradio.Settings.Manually">Manuellement</string>
+  <string name="Webradio.Settings.Disabled">Désactivé</string>
+  <string name="Webradio.Settings.Report">Signaler un lien mort</string>
+  <string name="Webradio.Settings.Online">Version connectée</string>
+  <string name="Webradio.Settings.Offline">Version déconnectée</string>
+  <string name="Webradio.Settings.Version">Version</string>
   <string name="Webradio.Favorites.ScreenTitle">Favoris</string>
+  <string name="Webradio.Favorites.Helptext">Gérer vos favoris</string>
   <string name="Webradio.Favorites.Add">Ajouter</string>
   <string name="Webradio.Favorites.Delete">Effacer</string>
+  <string name="Webradio.Favorites.Rename">Renommer</string>
+  <string name="Webradio.Favorites.Save">Sauvegarder</string>
   <string name="Webradio.Filter.ScreenTitle">Tri par</string>
+  <string name="Webradio.Filter.Helptext">Gérer vos filtres</string>
   <string name="Webradio.Filter.Delete">Effacer</string>
   <string name="Webradio.Filter.Add">Ajouter</string>
+  <string name="Webradio.Filter.Import">Importer</string>
   <string name="Webradio.Filter.Clear">Dégagé</string>
+  <string name="Webradio.Filter.Save">Sauvegarder</string>
+  <string name="Webradio.Filter.Genres">Genres</string>
+  <string name="Webradio.Filter.Bitrate">Bitrate</string>
+  <string name="Webradio.Filter.Country">Pays</string>
+  <string name="Webradio.Filter.City">Ville</string>
   <string name="Webradio.Dialog.ShowFilter.Header">Tri par</string>
+  <string name="Webradio.Dialog.ShowFilter.ShowFilter">Afficher Mon Filtre</string>
+  <string name="Webradio.Dialog.ShowFilter.Country">Pays</string>
+  <string name="Webradio.Dialog.ShowFilter.City">Ville</string>
   <string name="Webradio.Dialog.ShowFilter.Genre">Genre</string>
+  <string name="Webradio.Dialog.ShowFilter.Bitrate">Bitrate</string>
+  <string name="Webradio.Dialog.ImportFilter.Header">Importer un filtre</string>
+  <string name="Webradio.Dialog.DeleteFilter.Header">Effacer un filtre</string>
   <string name="Webradio.Dialog.DeleteFilter.Delete">Effacer</string>
+  <string name="Webradio.Dialog.ShowFavorites.Header">Afficher les favoris</string>
+  <string name="Webradio.Dialog.ShowFavorites.SetFav">Ajout ou suppression de flux sélectionné à partir des favoris</string>
+  <string name="Webradio.Dialog.ImportFavorites.Header">Importer un filtre</string>
   <string name="Webradio.Dialog.Search.Header">Recherche</string>
+  <string name="Webradio.Dialog.Search.Title">Inclu dans le titre</string>
+  <string name="Webradio.Dialog.Search.Description">Inclus dans la description</string>
+  <string name="Webradio.Dialog.Search.All">Sur la totalité</string>
+  <string name="Webradio.Dialog.Search.NoStreams">Aucun flux trouvé</string>
+  <string name="Webradio.Dialog.Search.NoSearchText">S.V.P, entrer un texte pour la recherche</string>
+  <string name="Webradio.Dialog.LoadUpdate.Header">Mettre à jour la liste des flux</string>
+  <string name="Webradio.Dialog.LoadUpdate.DownloadComplete">Téléchargement terminé</string>
+  <string name="Webradio.Dialog.LoadUpdate.DownloadError">Erreur lors du téléchargement</string>
+  <string name="Webradio.Dialog.LoadUpdate.Button">Démarrer la mise à jour</string>
+  <string name="Webradio.UIContributor.Listeners">Auditeurs:</string>
 </resources>
