--- a/Language/strings_lt.xml
+++ b/Language/strings_lt.xml
@@ -1,22 +1,70 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
+  <string name="Webradio.MenuEntry">Webradio</string>
+  <string name="Webradio.StateDisplayLabel">Webradio</string>
+  <string name="Webradio.Home.ScreenTitle">Webradio</string>
   <string name="Webradio.Home.Menu.View">Išvaizda</string>
   <string name="Webradio.Home.Menu.ShowFilter">Filtras</string>
   <string name="Webradio.Home.Menu.ShowFavorites">Megstamiausi</string>
+  <string name="Webradio.Home.Menu.ShowAll">Rodyti visus srautus</string>
   <string name="Webradio.Home.Menu.Settings">Nustatymai</string>
   <string name="Webradio.Home.Menu.Search">Paieska</string>
+  <string name="Webradio.Home.Genres">Žanrai</string>
+  <string name="Webradio.Home.Bitrate">Kokybė</string>
+  <string name="Webradio.Home.Country">Šalis</string>
+  <string name="Webradio.Home.City">Miestas</string>
   <string name="Webradio.Settings.ScreenTitle">Nustatymai</string>
   <string name="Webradio.Settings.Menu.Filter">Filtras</string>
   <string name="Webradio.Settings.Menu.Favorites">Megstamiausi</string>
+  <string name="Webradio.Settings.Updates">Atnaujinimai</string>
+  <string name="Webradio.Settings.Streamlistupdate">Atnaujinti srautų sąrašą</string>
+  <string name="Webradio.Settings.Languageupdate">Atnaujinti kalbas</string>
+  <string name="Webradio.Settings.Automatically">Automatiškai</string>
+  <string name="Webradio.Settings.Manually">Rankiniu būdu</string>
+  <string name="Webradio.Settings.Disabled">Išjungtas</string>
+  <string name="Webradio.Settings.Report">Pranešti apie neveikiančią stotį</string>
+  <string name="Webradio.Settings.Online">Versija prisijungus internetu</string>
+  <string name="Webradio.Settings.Offline">Versija neprisijungus internetu</string>
+  <string name="Webradio.Settings.Version">Versija</string>
   <string name="Webradio.Favorites.ScreenTitle">Megstamiausi</string>
+  <string name="Webradio.Favorites.Helptext">Tvarkyti Mėgstamiausius</string>
   <string name="Webradio.Favorites.Add">Pridėti</string>
   <string name="Webradio.Favorites.Delete">Trinti</string>
+  <string name="Webradio.Favorites.Rename">Pervardinti</string>
+  <string name="Webradio.Favorites.Save">Išsaugoti</string>
   <string name="Webradio.Filter.ScreenTitle">Filtras</string>
+  <string name="Webradio.Filter.Helptext">Tvarkyti Filtrus</string>
   <string name="Webradio.Filter.Delete">Trinti</string>
   <string name="Webradio.Filter.Add">Pridėti</string>
+  <string name="Webradio.Filter.Import">Importuoti</string>
   <string name="Webradio.Filter.Clear">Giedra</string>
+  <string name="Webradio.Filter.Save">Išsaugoti</string>
+  <string name="Webradio.Filter.Genres">Žanrai</string>
+  <string name="Webradio.Filter.Bitrate">Kokybė</string>
+  <string name="Webradio.Filter.Country">Šalis</string>
+  <string name="Webradio.Filter.City">Miestas</string>
   <string name="Webradio.Dialog.ShowFilter.Header">Filtras</string>
+  <string name="Webradio.Dialog.ShowFilter.ShowFilter">Rodyti Mano filtrą</string>
+  <string name="Webradio.Dialog.ShowFilter.Country">Šalis</string>
+  <string name="Webradio.Dialog.ShowFilter.City">Miestas</string>
   <string name="Webradio.Dialog.ShowFilter.Genre">Zanras</string>
+  <string name="Webradio.Dialog.ShowFilter.Bitrate">Kokybė</string>
+  <string name="Webradio.Dialog.ShowFilter.Quickfilter">Laikinas greitasis filtras</string>
+  <string name="Webradio.Dialog.ImportFilter.Header">Importuoti filtras</string>
+  <string name="Webradio.Dialog.DeleteFilter.Header">Ištrinti filtrą</string>
   <string name="Webradio.Dialog.DeleteFilter.Delete">Trinti</string>
+  <string name="Webradio.Dialog.ShowFavorites.Header">Rodyti mėgstamiausius</string>
+  <string name="Webradio.Dialog.ShowFavorites.SetFav">Pridėti arba pašalinti pasirinktus srautus iš Mėgstamiausiųjų</string>
+  <string name="Webradio.Dialog.ImportFavorites.Header">Importuoti filtrą</string>
   <string name="Webradio.Dialog.Search.Header">Paieska</string>
+  <string name="Webradio.Dialog.Search.Title">Antraštėje</string>
+  <string name="Webradio.Dialog.Search.Description">Aprašyme</string>
+  <string name="Webradio.Dialog.Search.All">Visur</string>
+  <string name="Webradio.Dialog.Search.NoStreams">Nerasta srautų</string>
+  <string name="Webradio.Dialog.Search.NoSearchText">Prašome įvesti paieškos tekstą</string>
+  <string name="Webradio.Dialog.LoadUpdate.Header">Atnaujinti srautų sąrašą</string>
+  <string name="Webradio.Dialog.LoadUpdate.DownloadComplete">Siuntimas baigtas</string>
+  <string name="Webradio.Dialog.LoadUpdate.DownloadError">Siuntimosi klaida</string>
+  <string name="Webradio.Dialog.LoadUpdate.Button">Pradėti naujinti</string>
+  <string name="Webradio.UIContributor.Listeners">Klausytojai:</string>
 </resources>
