--- a/Language/strings_sk.xml
+++ b/Language/strings_sk.xml
@@ -1,21 +1,70 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
+  <string name="Webradio.MenuEntry">Webrádio</string>
+  <string name="Webradio.StateDisplayLabel">Webrádio</string>
+  <string name="Webradio.Home.ScreenTitle">Webrádio</string>
+  <string name="Webradio.Home.Menu.View">Pohľad</string>
   <string name="Webradio.Home.Menu.ShowFilter">Filter</string>
   <string name="Webradio.Home.Menu.ShowFavorites">Obľúbené</string>
+  <string name="Webradio.Home.Menu.ShowAll">Zobraziť všetky streamy</string>
   <string name="Webradio.Home.Menu.Settings">Nastavenie</string>
   <string name="Webradio.Home.Menu.Search">Hľadať</string>
+  <string name="Webradio.Home.Genres">Žánre</string>
+  <string name="Webradio.Home.Bitrate">Bitrate</string>
+  <string name="Webradio.Home.Country">Krajina</string>
+  <string name="Webradio.Home.City">Mesto</string>
   <string name="Webradio.Settings.ScreenTitle">Nastavenie</string>
   <string name="Webradio.Settings.Menu.Filter">Filter</string>
   <string name="Webradio.Settings.Menu.Favorites">Obľúbené</string>
+  <string name="Webradio.Settings.Updates">Aktualizácie</string>
+  <string name="Webradio.Settings.Streamlistupdate">Aktualizovať zoznam streamov</string>
+  <string name="Webradio.Settings.Languageupdate">Aktualizovať jazyky</string>
+  <string name="Webradio.Settings.Automatically">Automaticky</string>
+  <string name="Webradio.Settings.Manually">Manuálne</string>
+  <string name="Webradio.Settings.Disabled">Nepovolené</string>
+  <string name="Webradio.Settings.Report">Nahlásiť nefunkčnosť stanice</string>
+  <string name="Webradio.Settings.Online">Verzia online</string>
+  <string name="Webradio.Settings.Offline">Verzia offline</string>
+  <string name="Webradio.Settings.Version">Verzia</string>
   <string name="Webradio.Favorites.ScreenTitle">Obľúbené</string>
+  <string name="Webradio.Favorites.Helptext">Spravujte obľúbené</string>
   <string name="Webradio.Favorites.Add">Pridať</string>
   <string name="Webradio.Favorites.Delete">Vymazať</string>
+  <string name="Webradio.Favorites.Rename">Premenovať</string>
+  <string name="Webradio.Favorites.Save">Uložiť</string>
   <string name="Webradio.Filter.ScreenTitle">Filter</string>
+  <string name="Webradio.Filter.Helptext">Spravujte filtre</string>
   <string name="Webradio.Filter.Delete">Vymazať</string>
   <string name="Webradio.Filter.Add">Pridať</string>
-  <string name="Webradio.Filter.Clear">Jasno</string>
-  <string name="Webradio.Dialog.ShowFilter.Header">Filter</string>
-  <string name="Webradio.Dialog.ShowFilter.Genre">Genre</string>
+  <string name="Webradio.Filter.Import">Importovať</string>
+  <string name="Webradio.Filter.Clear">Vymazať</string>
+  <string name="Webradio.Filter.Save">Uložiť</string>
+  <string name="Webradio.Filter.Genres">Žánre</string>
+  <string name="Webradio.Filter.Bitrate">Bitrate</string>
+  <string name="Webradio.Filter.Country">Krajina</string>
+  <string name="Webradio.Filter.City">Mesto</string>
+  <string name="Webradio.Dialog.ShowFilter.Header">Zobraziť Filter</string>
+  <string name="Webradio.Dialog.ShowFilter.ShowFilter">Zobraziť môj filter</string>
+  <string name="Webradio.Dialog.ShowFilter.Country">Krajina</string>
+  <string name="Webradio.Dialog.ShowFilter.City">Mesto</string>
+  <string name="Webradio.Dialog.ShowFilter.Genre">Žáner</string>
+  <string name="Webradio.Dialog.ShowFilter.Bitrate">Bitrate</string>
+  <string name="Webradio.Dialog.ShowFilter.Quickfilter">Rýchly dočasný filter</string>
+  <string name="Webradio.Dialog.ImportFilter.Header">Importovať filter</string>
+  <string name="Webradio.Dialog.DeleteFilter.Header">Vymazať filter</string>
   <string name="Webradio.Dialog.DeleteFilter.Delete">Vymazať</string>
+  <string name="Webradio.Dialog.ShowFavorites.Header">Zobraziť obľúbené</string>
+  <string name="Webradio.Dialog.ShowFavorites.SetFav">Pridať alebo odobrať vybraný stream z obľúbených</string>
+  <string name="Webradio.Dialog.ImportFavorites.Header">Importovať filter</string>
   <string name="Webradio.Dialog.Search.Header">Hľadať</string>
+  <string name="Webradio.Dialog.Search.Title">v názve</string>
+  <string name="Webradio.Dialog.Search.Description">v popise</string>
+  <string name="Webradio.Dialog.Search.All">všade</string>
+  <string name="Webradio.Dialog.Search.NoStreams">Streamy sa nenašli</string>
+  <string name="Webradio.Dialog.Search.NoSearchText">Zadajte prosím text</string>
+  <string name="Webradio.Dialog.LoadUpdate.Header">Aktualizovať zoznam streamov</string>
+  <string name="Webradio.Dialog.LoadUpdate.DownloadComplete">Sťahovanie skončené</string>
+  <string name="Webradio.Dialog.LoadUpdate.DownloadError">Chyba sťahovania</string>
+  <string name="Webradio.Dialog.LoadUpdate.Button">Spustiť aktualizáciu</string>
+  <string name="Webradio.UIContributor.Listeners">Poslucháči:</string>
 </resources>
