--- a/Language/strings_sl.xml
+++ b/Language/strings_sl.xml
@@ -1,21 +1,70 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
+  <string name="Webradio.MenuEntry">Internet radio</string>
+  <string name="Webradio.StateDisplayLabel">Internet radio</string>
+  <string name="Webradio.Home.ScreenTitle">Internet radio</string>
+  <string name="Webradio.Home.Menu.View">Pogled</string>
   <string name="Webradio.Home.Menu.ShowFilter">Filter</string>
   <string name="Webradio.Home.Menu.ShowFavorites">Priljubljene</string>
+  <string name="Webradio.Home.Menu.ShowAll">Prikaži vse vire</string>
   <string name="Webradio.Home.Menu.Settings">Nastavitve</string>
   <string name="Webradio.Home.Menu.Search">Iskanje</string>
+  <string name="Webradio.Home.Genres">Žanri</string>
+  <string name="Webradio.Home.Bitrate">Kvaliteta</string>
+  <string name="Webradio.Home.Country">Država</string>
+  <string name="Webradio.Home.City">Mesto</string>
   <string name="Webradio.Settings.ScreenTitle">Nastavitve</string>
   <string name="Webradio.Settings.Menu.Filter">Filter</string>
   <string name="Webradio.Settings.Menu.Favorites">Priljubljene</string>
+  <string name="Webradio.Settings.Updates">Posodobitve</string>
+  <string name="Webradio.Settings.Streamlistupdate">Posodobi seznam virov</string>
+  <string name="Webradio.Settings.Languageupdate">Posodobi jezike</string>
+  <string name="Webradio.Settings.Automatically">Avtomatsko</string>
+  <string name="Webradio.Settings.Manually">Ročno</string>
+  <string name="Webradio.Settings.Disabled">Onemogočeno</string>
+  <string name="Webradio.Settings.Report">Prijavi pokvarjeno postajo</string>
+  <string name="Webradio.Settings.Online">Verzija na internetu</string>
+  <string name="Webradio.Settings.Offline">Naložena verzija</string>
+  <string name="Webradio.Settings.Version">Verzija</string>
   <string name="Webradio.Favorites.ScreenTitle">Priljubljene</string>
+  <string name="Webradio.Favorites.Helptext">Urejaj priljubljene</string>
   <string name="Webradio.Favorites.Add">Dodaj</string>
   <string name="Webradio.Favorites.Delete">Izbriši</string>
+  <string name="Webradio.Favorites.Rename">Preimenuj</string>
+  <string name="Webradio.Favorites.Save">Shrani</string>
   <string name="Webradio.Filter.ScreenTitle">Filter</string>
+  <string name="Webradio.Filter.Helptext">Urejaj filtre</string>
   <string name="Webradio.Filter.Delete">Izbriši</string>
   <string name="Webradio.Filter.Add">Dodaj</string>
+  <string name="Webradio.Filter.Import">Uvozi</string>
   <string name="Webradio.Filter.Clear">jasno</string>
+  <string name="Webradio.Filter.Save">Shrani</string>
+  <string name="Webradio.Filter.Genres">Žanri</string>
+  <string name="Webradio.Filter.Bitrate">Kvaliteta</string>
+  <string name="Webradio.Filter.Country">Država</string>
+  <string name="Webradio.Filter.City">Mesto</string>
   <string name="Webradio.Dialog.ShowFilter.Header">Filter</string>
+  <string name="Webradio.Dialog.ShowFilter.ShowFilter">Prikaži moj filter</string>
+  <string name="Webradio.Dialog.ShowFilter.Country">Država</string>
+  <string name="Webradio.Dialog.ShowFilter.City">Mesto</string>
   <string name="Webradio.Dialog.ShowFilter.Genre">Žanr</string>
+  <string name="Webradio.Dialog.ShowFilter.Bitrate">Kvaliteta</string>
+  <string name="Webradio.Dialog.ShowFilter.Quickfilter">Začasen hitri filter</string>
+  <string name="Webradio.Dialog.ImportFilter.Header">Uvozi filter</string>
+  <string name="Webradio.Dialog.DeleteFilter.Header">Briši filter</string>
   <string name="Webradio.Dialog.DeleteFilter.Delete">Izbriši</string>
+  <string name="Webradio.Dialog.ShowFavorites.Header">Prikaži priljubljene</string>
+  <string name="Webradio.Dialog.ShowFavorites.SetFav">Dodaj ali odstrani izbrani vir iz priljubljenih</string>
+  <string name="Webradio.Dialog.ImportFavorites.Header">Uvozi filter</string>
   <string name="Webradio.Dialog.Search.Header">Iskanje</string>
+  <string name="Webradio.Dialog.Search.Title">v naslovu</string>
+  <string name="Webradio.Dialog.Search.Description">v opisu</string>
+  <string name="Webradio.Dialog.Search.All">v vseh poljih</string>
+  <string name="Webradio.Dialog.Search.NoStreams">Nisem našel virov</string>
+  <string name="Webradio.Dialog.Search.NoSearchText">Vpiši tekst za iskanje</string>
+  <string name="Webradio.Dialog.LoadUpdate.Header">Posodobi seznam virov</string>
+  <string name="Webradio.Dialog.LoadUpdate.DownloadComplete">Prenos je končan</string>
+  <string name="Webradio.Dialog.LoadUpdate.DownloadError">Napaka pri nalaganju</string>
+  <string name="Webradio.Dialog.LoadUpdate.Button">Začni posodabljanje</string>
+  <string name="Webradio.UIContributor.Listeners">Poslušalci:</string>
 </resources>
