--- a/Language/strings_sv.xml
+++ b/Language/strings_sv.xml
@@ -6,43 +6,65 @@
   <string name="Webradio.Home.Menu.View">Vy</string>
   <string name="Webradio.Home.Menu.ShowFilter">Filter</string>
   <string name="Webradio.Home.Menu.ShowFavorites">Favoriter</string>
-  <string name="Webradio.Home.Menu.ShowAll">Visa alla strömmar</string>
+  <string name="Webradio.Home.Menu.ShowAll">Visa alla webradiostationer</string>
   <string name="Webradio.Home.Menu.Settings">Inställningar</string>
   <string name="Webradio.Home.Menu.Search">Sök</string>
   <string name="Webradio.Home.Genres">Genrer</string>
-  <string name="Webradio.Home.Bitrate">Bitrate</string>
+  <string name="Webradio.Home.Bitrate">Bithastighet</string>
   <string name="Webradio.Home.Country">Land</string>
   <string name="Webradio.Home.City">Stad</string>
   <string name="Webradio.Settings.ScreenTitle">Inställningar</string>
   <string name="Webradio.Settings.Menu.Filter">Filter</string>
   <string name="Webradio.Settings.Menu.Favorites">Favoriter</string>
+  <string name="Webradio.Settings.Updates">Uppdateringar</string>
+  <string name="Webradio.Settings.Streamlistupdate">Uppdatera listan med webradiostationer</string>
+  <string name="Webradio.Settings.Languageupdate">Uppdatera språken</string>
+  <string name="Webradio.Settings.Automatically">Automatiskt</string>
+  <string name="Webradio.Settings.Manually">Manuellt</string>
+  <string name="Webradio.Settings.Disabled">Inaktiverad</string>
+  <string name="Webradio.Settings.Report">Rapportera felaktig station</string>
+  <string name="Webradio.Settings.Online">Version online</string>
+  <string name="Webradio.Settings.Offline">Version offline</string>
+  <string name="Webradio.Settings.Version">Version</string>
   <string name="Webradio.Favorites.ScreenTitle">Favoriter</string>
+  <string name="Webradio.Favorites.Helptext">Hantera favoriter</string>
   <string name="Webradio.Favorites.Add">Lägg till</string>
   <string name="Webradio.Favorites.Delete">Ta bort</string>
   <string name="Webradio.Favorites.Rename">Byt namn</string>
   <string name="Webradio.Favorites.Save">Spara</string>
   <string name="Webradio.Filter.ScreenTitle">Filter</string>
+  <string name="Webradio.Filter.Helptext">Hantera filter</string>
   <string name="Webradio.Filter.Delete">Ta bort</string>
   <string name="Webradio.Filter.Add">Lägg till</string>
   <string name="Webradio.Filter.Import">Importera</string>
-  <string name="Webradio.Filter.Clear">Klart</string>
+  <string name="Webradio.Filter.Clear">Rensa</string>
   <string name="Webradio.Filter.Save">Spara</string>
   <string name="Webradio.Filter.Genres">Genrer</string>
-  <string name="Webradio.Filter.Bitrate">Bitrate</string>
+  <string name="Webradio.Filter.Bitrate">Bithastighet</string>
   <string name="Webradio.Filter.Country">Land</string>
   <string name="Webradio.Filter.City">Stad</string>
-  <string name="Webradio.Dialog.ShowFilter.Header">Filter</string>
-  <string name="Webradio.Dialog.ShowFilter.ShowFilter">Visa mina filter</string>
+  <string name="Webradio.Dialog.ShowFilter.Header">Visa filter</string>
+  <string name="Webradio.Dialog.ShowFilter.ShowFilter">Visa mitt filter</string>
   <string name="Webradio.Dialog.ShowFilter.Country">Land</string>
   <string name="Webradio.Dialog.ShowFilter.City">Stad</string>
   <string name="Webradio.Dialog.ShowFilter.Genre">Genre</string>
-  <string name="Webradio.Dialog.ShowFilter.Bitrate">Bitrate</string>
+  <string name="Webradio.Dialog.ShowFilter.Bitrate">Bithastighet</string>
   <string name="Webradio.Dialog.ShowFilter.Quickfilter">Tillfälligt snabbfilter</string>
   <string name="Webradio.Dialog.ImportFilter.Header">Importfilter</string>
   <string name="Webradio.Dialog.DeleteFilter.Header">Ta bort filter</string>
   <string name="Webradio.Dialog.DeleteFilter.Delete">Ta bort</string>
   <string name="Webradio.Dialog.ShowFavorites.Header">Visa favoriter</string>
-  <string name="Webradio.Dialog.ShowFavorites.SetFav">Lägg till eller ta bort valda strömmar från favoriter</string>
+  <string name="Webradio.Dialog.ShowFavorites.SetFav">Lägg till eller ta bort valda webradiostationer från favoriter</string>
   <string name="Webradio.Dialog.ImportFavorites.Header">Importfilter</string>
   <string name="Webradio.Dialog.Search.Header">Sök</string>
+  <string name="Webradio.Dialog.Search.Title">i titeln</string>
+  <string name="Webradio.Dialog.Search.Description">i beskrivningen</string>
+  <string name="Webradio.Dialog.Search.All">i allt</string>
+  <string name="Webradio.Dialog.Search.NoStreams">Hittade inga stationer</string>
+  <string name="Webradio.Dialog.Search.NoSearchText">Skriv in en söktext</string>
+  <string name="Webradio.Dialog.LoadUpdate.Header">Uppdatera listan med webradiostationer</string>
+  <string name="Webradio.Dialog.LoadUpdate.DownloadComplete">Nerladdningen är klar</string>
+  <string name="Webradio.Dialog.LoadUpdate.DownloadError">Fel vid nedladdning</string>
+  <string name="Webradio.Dialog.LoadUpdate.Button">Starta uppdatering</string>
+  <string name="Webradio.UIContributor.Listeners">Lyssnare:</string>
 </resources>
