--- a/Language/strings_da.xml
+++ b/Language/strings_da.xml
@@ -19,4 +19,5 @@
   <string name="Webradio.Dialog.ShowFilter.Genre">Genre</string>
   <string name="Webradio.Dialog.DeleteFilter.Delete">Slet</string>
   <string name="Webradio.Dialog.Search.Header">Søg</string>
+  <string name="Webradio.Dialog.LoadUpdate.DownloadComplete">Download færdig</string>
 </resources>
