--- a/Language/strings_fi.xml
+++ b/Language/strings_fi.xml
@@ -1,21 +1,70 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
+  <string name="Webradio.MenuEntry">Internet-radio</string>
+  <string name="Webradio.StateDisplayLabel">Internet-radio</string>
+  <string name="Webradio.Home.ScreenTitle">Internet-radio</string>
+  <string name="Webradio.Home.Menu.View">Näytä</string>
   <string name="Webradio.Home.Menu.ShowFilter">Suodata</string>
   <string name="Webradio.Home.Menu.ShowFavorites">Suosikit</string>
+  <string name="Webradio.Home.Menu.ShowAll">Näytä kaikki striimit</string>
   <string name="Webradio.Home.Menu.Settings">Asetukset</string>
   <string name="Webradio.Home.Menu.Search">Haku</string>
+  <string name="Webradio.Home.Genres">Tyylilajit</string>
+  <string name="Webradio.Home.Bitrate">Bittinopeus</string>
+  <string name="Webradio.Home.Country">Maa</string>
+  <string name="Webradio.Home.City">Kaupunki</string>
   <string name="Webradio.Settings.ScreenTitle">Asetukset</string>
   <string name="Webradio.Settings.Menu.Filter">Suodata</string>
   <string name="Webradio.Settings.Menu.Favorites">Suosikit</string>
+  <string name="Webradio.Settings.Updates">Päivitykset</string>
+  <string name="Webradio.Settings.Streamlistupdate">Päivitä streamilista</string>
+  <string name="Webradio.Settings.Languageupdate">Päivitä kielet</string>
+  <string name="Webradio.Settings.Automatically">Automaattisesti</string>
+  <string name="Webradio.Settings.Manually">Manuaalisesti</string>
+  <string name="Webradio.Settings.Disabled">Pois päältä</string>
+  <string name="Webradio.Settings.Report">Raportoi toimimaton asema</string>
+  <string name="Webradio.Settings.Online">Versio Online</string>
+  <string name="Webradio.Settings.Offline">Versio Offline</string>
+  <string name="Webradio.Settings.Version">Versio</string>
   <string name="Webradio.Favorites.ScreenTitle">Suosikit</string>
+  <string name="Webradio.Favorites.Helptext">Hallitse suosikkejasi</string>
   <string name="Webradio.Favorites.Add">Lisää</string>
   <string name="Webradio.Favorites.Delete">Poista</string>
+  <string name="Webradio.Favorites.Rename">Nimeä uudelleen</string>
+  <string name="Webradio.Favorites.Save">Tallenna</string>
   <string name="Webradio.Filter.ScreenTitle">Suodata</string>
+  <string name="Webradio.Filter.Helptext">Hallitse suodattimiasi</string>
   <string name="Webradio.Filter.Delete">Poista</string>
   <string name="Webradio.Filter.Add">Lisää</string>
+  <string name="Webradio.Filter.Import">Tuo</string>
   <string name="Webradio.Filter.Clear">Selkeä</string>
+  <string name="Webradio.Filter.Save">Tallenna</string>
+  <string name="Webradio.Filter.Genres">Tyylilajit</string>
+  <string name="Webradio.Filter.Bitrate">Bittinopeus</string>
+  <string name="Webradio.Filter.Country">Maa</string>
+  <string name="Webradio.Filter.City">Kaupunki</string>
   <string name="Webradio.Dialog.ShowFilter.Header">Suodata</string>
+  <string name="Webradio.Dialog.ShowFilter.ShowFilter">Näytä suodattimeni</string>
+  <string name="Webradio.Dialog.ShowFilter.Country">Maa</string>
+  <string name="Webradio.Dialog.ShowFilter.City">Kaupunki</string>
   <string name="Webradio.Dialog.ShowFilter.Genre">Genre</string>
+  <string name="Webradio.Dialog.ShowFilter.Bitrate">Bittinopeus</string>
+  <string name="Webradio.Dialog.ShowFilter.Quickfilter">Väliaikainen pika-suodatin</string>
+  <string name="Webradio.Dialog.ImportFilter.Header">Tuo suodatin</string>
+  <string name="Webradio.Dialog.DeleteFilter.Header">Poista suodatin</string>
   <string name="Webradio.Dialog.DeleteFilter.Delete">Poista</string>
+  <string name="Webradio.Dialog.ShowFavorites.Header">Näytä Suosikit</string>
+  <string name="Webradio.Dialog.ShowFavorites.SetFav">Lisää tai poista valittu striimi Suosikeista</string>
+  <string name="Webradio.Dialog.ImportFavorites.Header">Tuo suodatin</string>
   <string name="Webradio.Dialog.Search.Header">Haku</string>
+  <string name="Webradio.Dialog.Search.Title">otsikossa</string>
+  <string name="Webradio.Dialog.Search.Description">kuvauksessa</string>
+  <string name="Webradio.Dialog.Search.All">kaikissa</string>
+  <string name="Webradio.Dialog.Search.NoStreams">Striimejä ei löytynyt</string>
+  <string name="Webradio.Dialog.Search.NoSearchText">Täytä etsintä kenttä</string>
+  <string name="Webradio.Dialog.LoadUpdate.Header">Päivitä streamilista</string>
+  <string name="Webradio.Dialog.LoadUpdate.DownloadComplete">Lataus valmis</string>
+  <string name="Webradio.Dialog.LoadUpdate.DownloadError">Lataus virhe</string>
+  <string name="Webradio.Dialog.LoadUpdate.Button">Aloita päivitys</string>
+  <string name="Webradio.UIContributor.Listeners">Kuuntelijat:</string>
 </resources>
