--- a/Language/strings_nl.xml
+++ b/Language/strings_nl.xml
@@ -1,22 +1,70 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
+  <string name="Webradio.MenuEntry">Webradio</string>
+  <string name="Webradio.StateDisplayLabel">Webradio</string>
+  <string name="Webradio.Home.ScreenTitle">Webradio</string>
   <string name="Webradio.Home.Menu.View">Bekijk</string>
   <string name="Webradio.Home.Menu.ShowFilter">Filter</string>
   <string name="Webradio.Home.Menu.ShowFavorites">Favorieten</string>
+  <string name="Webradio.Home.Menu.ShowAll">Laat alle Streams zien</string>
   <string name="Webradio.Home.Menu.Settings">Settings</string>
   <string name="Webradio.Home.Menu.Search">Zoek</string>
-  <string name="Webradio.Settings.ScreenTitle">Settings</string>
+  <string name="Webradio.Home.Genres">Genres</string>
+  <string name="Webradio.Home.Bitrate">Bitrate</string>
+  <string name="Webradio.Home.Country">Land</string>
+  <string name="Webradio.Home.City">Stad</string>
+  <string name="Webradio.Settings.ScreenTitle">Instellingen</string>
   <string name="Webradio.Settings.Menu.Filter">Filter</string>
   <string name="Webradio.Settings.Menu.Favorites">Favorieten</string>
+  <string name="Webradio.Settings.Updates">Updates</string>
+  <string name="Webradio.Settings.Streamlistupdate">Streamlijst bijwerken</string>
+  <string name="Webradio.Settings.Languageupdate">Talen bijwerken</string>
+  <string name="Webradio.Settings.Automatically">Automatisch</string>
+  <string name="Webradio.Settings.Manually">Handmatig</string>
+  <string name="Webradio.Settings.Disabled">Uitgeschakeld</string>
+  <string name="Webradio.Settings.Report">Rapporteer kapot Station</string>
+  <string name="Webradio.Settings.Online">Versie Online</string>
+  <string name="Webradio.Settings.Offline">Versie Offline</string>
+  <string name="Webradio.Settings.Version">Versie</string>
   <string name="Webradio.Favorites.ScreenTitle">Favorieten</string>
+  <string name="Webradio.Favorites.Helptext">Favorieten beheren</string>
   <string name="Webradio.Favorites.Add">Toevoegen</string>
   <string name="Webradio.Favorites.Delete">Verwijderen</string>
+  <string name="Webradio.Favorites.Rename">Hernoem</string>
+  <string name="Webradio.Favorites.Save">Sla op</string>
   <string name="Webradio.Filter.ScreenTitle">Filter</string>
+  <string name="Webradio.Filter.Helptext">Filters beheren</string>
   <string name="Webradio.Filter.Delete">Verwijderen</string>
   <string name="Webradio.Filter.Add">Toevoegen</string>
+  <string name="Webradio.Filter.Import">Importeer</string>
   <string name="Webradio.Filter.Clear">Helder</string>
+  <string name="Webradio.Filter.Save">Sla op</string>
+  <string name="Webradio.Filter.Genres">Genres</string>
+  <string name="Webradio.Filter.Bitrate">Bitrate</string>
+  <string name="Webradio.Filter.Country">Land</string>
+  <string name="Webradio.Filter.City">Stad</string>
   <string name="Webradio.Dialog.ShowFilter.Header">Filter</string>
+  <string name="Webradio.Dialog.ShowFilter.ShowFilter">Laat mijn Filter zien</string>
+  <string name="Webradio.Dialog.ShowFilter.Country">Land</string>
+  <string name="Webradio.Dialog.ShowFilter.City">Stad</string>
   <string name="Webradio.Dialog.ShowFilter.Genre">Genre</string>
+  <string name="Webradio.Dialog.ShowFilter.Bitrate">Bitrate</string>
+  <string name="Webradio.Dialog.ShowFilter.Quickfilter">Tijdelijk Snel Filter</string>
+  <string name="Webradio.Dialog.ImportFilter.Header">Importeer Filter</string>
+  <string name="Webradio.Dialog.DeleteFilter.Header">Verwijder Filter</string>
   <string name="Webradio.Dialog.DeleteFilter.Delete">Verwijderen</string>
+  <string name="Webradio.Dialog.ShowFavorites.Header">Laat Favorieten zien</string>
+  <string name="Webradio.Dialog.ShowFavorites.SetFav">Toevoegen of Verwijderen van de geselecteerde Stream uit Favorieten</string>
+  <string name="Webradio.Dialog.ImportFavorites.Header">Importeer Filter</string>
   <string name="Webradio.Dialog.Search.Header">Zoek</string>
+  <string name="Webradio.Dialog.Search.Title">in Titel</string>
+  <string name="Webradio.Dialog.Search.Description">in Omschrijving</string>
+  <string name="Webradio.Dialog.Search.All">In Alle</string>
+  <string name="Webradio.Dialog.Search.NoStreams">Geen streams gevonden</string>
+  <string name="Webradio.Dialog.Search.NoSearchText">Voer zoekopdracht in</string>
+  <string name="Webradio.Dialog.LoadUpdate.Header">Streamlijst bijwerken</string>
+  <string name="Webradio.Dialog.LoadUpdate.DownloadComplete">Download gereed</string>
+  <string name="Webradio.Dialog.LoadUpdate.DownloadError">Download fout</string>
+  <string name="Webradio.Dialog.LoadUpdate.Button">Begin Update</string>
+  <string name="Webradio.UIContributor.Listeners">Luisteraars:</string>
 </resources>
