An neuen "CompatibleAPI" Modus angepasst

--- a/Language/strings_ku.xml
+++ b/Language/strings_ku.xml
@@ -3,4 +3,5 @@
   <string name="Webradio.Home.Menu.Search">گەڕان</string>
   <string name="Webradio.Dialog.ShowFilter.Genre">جۆر</string>
   <string name="Webradio.Dialog.Search.Header">گەڕان</string>
+  <!--UN codes-->
 </resources>
