--- a/Language/strings_pt_BR.xml
+++ b/Language/strings_pt_BR.xml
@@ -3,4 +3,5 @@
   <string name="Webradio.Home.Menu.Search">Procurar</string>
   <string name="Webradio.Filter.Clear">Limpo</string>
   <string name="Webradio.Dialog.Search.Header">Procurar</string>
+  <!--UN codes-->
 </resources>
